--- a/demo4/package.json
+++ b/demo4/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "demo3",
-  "version": "1.0.0",
   "devDependencies": {
     "rollup": "^1.26.3",
-    "rollup-plugin-json": "^4.0.0"
+    "rollup-plugin-node-resolve": "^5.2.0"
+  },
+  "dependencies": {
+    "lodash-es": "^4.17.21"
   },
   "scripts": {
     "build": "yarn rollup --config rollup.config.js"
